# libzplay

./: .gitignore  CMakeLists.txt  CMakePresets.json  ChangeLog.txt  License.txt  README.md  README.txt
.github/workflows/: main.yml
cmake/: Findfaac.cmake  Findfaad2.cmake  Findliba52.cmake  libzplayConfig.cmake.in
decoders/a52dec/vc++/: liba52.vcxproj  liba52.vcxproj.filters
decoders/faac/libfaac/: libfaac.vcxproj  libfaac.vcxproj.filters
decoders/faad/libfaad/: common.h  libfaad.vcxproj  libfaad.vcxproj.filters
decoders/jpeglib/: jpeglib.vcxproj  jpeglib.vcxproj.filters
decoders/lame/libmp3lame/: id3tag.c  libmp3lame_vc6.vcxproj  libmp3lame_vc6.vcxproj.filters
decoders/libFLAC/: libFLAC_static.vcxproj  libFLAC_static.vcxproj.filters  metadata_iterators.c  stream_decoder.c  stream_encoder.c
decoders/libmad/msvc++/: libmad.vcxproj  libmad.vcxproj.filters
decoders/libogg/win32/: ogg_static.vcxproj  ogg_static.vcxproj.filters
decoders/libvorbis/win32/: vorbis_static.vcxproj  vorbis_static.vcxproj.filters  vorbisenc_static.vcxproj  vorbisenc_static.vcxproj.filters  vorbisfile_static.vcxproj  vorbisfile_static.vcxproj.filters
decoders/lpng/libpng/: libpng.vcxproj  libpng.vcxproj.filters
decoders/soundtouch/source/SoundTouch/: SoundTouch.vcxproj  SoundTouch.vcxproj.filters
decoders/zlib/: zlib.vcxproj  zlib.vcxproj.filters
doc_src/: libZPlayNET.h  libzplay.h
doc_src/Cpp/zplay/: GetWaveInInfo.txt  GetWaveOutInfo.txt
doc_src/csharp/zplay/: GetWaveInInfo.txt  GetWaveOutInfo.txt
doc_src/delphi/zplay/: GetWaveInInfo.txt  GetWaveInInfoW.txt  GetWaveOutInfo.txt  GetWaveOutInfoW.txt
doc_src/vb/zplay/: GetWaveInInfo.txt  GetWaveOutInfo.txt
doc_src/vcnet/zplay/: GetWaveInInfo.txt  GetWaveOutInfo.txt
example/: decode_to_aac.cpp  decode_to_flac.cpp  decode_to_mp3.cpp  decode_to_ogg.cpp  decode_to_wave.cpp  display_fft.cpp  display_id3.cpp  dynamic_stream.cpp  echo.cpp  equalizer.cpp  example.cpp  example1.cpp  example2.cpp  gapless_playing.cpp  play_file.cpp  record_to_mp3.cpp  record_to_ogg.cpp  reverse_playing.cpp  test_code.cpp  two_soundcards.cpp
image/bmp2code/: CMakeLists.txt  bmptocode.cpp  example.cpp
include/libzplay/: libzplay.h
src/: config.h  debug.h  libzplay.cpp  resource.rc  two_soundcards.cpp  waacdecoder.cpp  waacdecoder.h  waacencoder.cpp  waacencoder.h  wac3decoder.cpp  wac3decoder.h  waudioprocessor.cpp  waudioprocessor.h  wbmpfont.cpp  wbmpfont.h  wbpmdetect.cpp  wbpmdetect.h  wbpmdetect1.cpp  wbpmdetect1.h  wbpmdetect2.cpp  wbpmdetect2.h  wbpmdetect3.cpp  wbpmdetect3.h  wcentercutprocessor.cpp  wcentercutprocessor.h  wdecoder.cpp  wdecoder.h  wechoprocessor.cpp  wechoprocessor.h  wencoder.cpp  wencoder.h  weqprocessor.cpp  weqprocessor.h  wfft.cpp  wfft.h  wflacdecoder.cpp  wflacdecoder.h  wflacencoder.cpp  wflacencoder.h  winputprocessor.cpp  (+33 more)
vc++/: libzplay.sln
vc++/example_static/: example_static.vcxproj  example_static.vcxproj.filters
vc++/libzplay_dynamic/: libzplay_dynamic.vcxproj  libzplay_dynamic.vcxproj.filters
vc++/libzplay_pf_dynamic/: libzplay_pf_dynamic.vcxproj  libzplay_pf_dynamic.vcxproj.filters
vc++/libzplay_pf_static/: libzplay_pf_static.vcxproj  libzplay_pf_static.vcxproj.filters
vc++/libzplay_static/: libzplay_static.vcxproj  libzplay_static.vcxproj.filters
vcpkg-ports/faac/: CMakeLists.txt  portfile.cmake  vcpkg.json
vcpkg-ports/liba52/: CMakeLists.txt  liba52.def  portfile.cmake  vcpkg.json
vcpkg-ports/libzplay/: portfile.cmake
vcpkg-ports/soundtouch/: 0001-make-ptrbegin-public.patch  portfile.cmake  vcpkg.json
